Update cPanel deployment workflow with env vars
Added environment variables for EmailJS and restructured deployment paths.

--- a/.github/workflows/deploycpanel.yml
+++ b/.github/workflows/deploycpanel.yml
@@ -23,12 +23,18 @@ jobs:
 
       - name: Build project
         run: npm run build
-     
+        env:
+          VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID }}
+          VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}
+          VITE_EMAILJS_TEMPLATE_ID_2: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID_2 }}
+          VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}
+          VITE_RECAPTCHA_SITE_KEY: ${{ secrets.VITE_RECAPTCHA_SITE_KEY }}
+
       - name: Deploy to cPanel via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: dist/public_html/       # Vite output folder
-          server-dir: public_html/  # مكان الدومين على السيرفر
+          local-dir: dist/        # <-- هنا
+          server-dir: public_html/
