Update server directory path in deploycpanel.yml

--- a/.github/workflows/deploycpanel.yml
+++ b/.github/workflows/deploycpanel.yml
@@ -37,4 +37,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/        # <-- هنا
-          server-dir: /home1/bridgetravel/public_html/
+          server-dir: public_html/
